# worldweaver

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gym  FEDERATION.md  GEMINI.md  LEGACY_REPOS.md  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  VISION.md  alembic.ini  arc_scan.txt  dev.py  docker-compose.yml  find_boms.py  main.py  playtest.py  pyproject.toml  requirements.txt  test_imports.py  turn_1.json  turn_10.json  turn_2.json  turn_3.json  turn_4.json  turn_5.json  turn_6.json  turn_7.json  turn_8.json  turn_9.json
ww_agent/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
ww_agent/config/: README.md  env.example
ww_agent/familiar/: pulses.txt  wake-all.sh  wake-cinder.sh  wake-local.sh  wake.sh
ww_agent/scripts/: .substrate_sync_baseline  README.md  backfill_resident_actor_ids.py  build_parallel_probe.py  cost_curve.py  create_resident.py  familiar.py  field_guide.py  give.py  hearth_activation.py  hearth_handoff.py  hearth_manifest.py  hearth_package.py  import_stable_hearth.py  live_boot.py  peer_register_check.py  pulse_demo.py  pulse_familiars.py  reciprocity.py  register_calibration.py  register_construct_check.py  register_retention.py  resident_cohort.py  resident_gym_artifact.py  resident_once.py  score_predictions.py  seed_residents.py  seed_test.py  soul_domain_retention.py  substrate_sync_manifest.toml  sync_substrate.py  three_axis.py  voice_test.py
ww_agent/src/: README.md  main.py  resident.py
ww_agent/tests/: README.md  test_anchors.py  test_circadian.py  test_city_tools.py  test_cognitive_core.py  test_doula.py  test_drive.py  test_encrypted_hearth_package.py  test_familiar_launcher.py  test_file_scope.py  test_gifts.py  (+50 more)
(+2072 files in other folders)
