[project]
name = "worldweaver-agent"
version = "0.1.0"
description = "Minimal event-driven agent runtime for WorldWeaver residents"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
dependencies = [
    "cryptography>=46,<50",
    "httpx[http2]>=0.28,<1",
    "python-dotenv>=1,<2",
    "pydantic>=2.13,<3",
    "pathspec>=0.12,<2",
    "pypdfium2>=4,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "pytest-asyncio>=0.24,<2",
]

[project.scripts]
worldweaver-agent = "src.main:cli_entry"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py311"]
